# sk_elections

./: .gitignore  README.md  agents.md  elections-analysis.py  generate_html.py  mise.toml  pyproject.toml  scraper.py  sk_election_model.py  trend_analysis.py
.github/workflows/: deploy-pages.yml  fetch-data.yml
data/: 2023.json  2024.json  2025.json  2026.json  input.json  scenarios.json  test.json  weights.json
docs/: data.json  index.html
